--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -246,7 +246,7 @@ steps:
 - name: 'e2e-runner'
   args:
     - 'CustomFasSyncInterval=false&StateAllocationFilter=false&LifecycleContract=true&PlayerAllocationFilter=true&PlayerTracking=true&ResetMetricsOnDelete=true&SDKGracefulTermination=true&Example=true'
-    - 'e2e-test-cluster-1'
+    - 'e2e-test-cluster'
     - "${_REGISTRY}"
   id: e2e-feature-gates
   waitFor:
@@ -261,6 +261,30 @@ steps:
   args:
     - ''
     - 'e2e-test-cluster'
+    - "${_REGISTRY}"
+  id: e2e-stable
+  waitFor:
+    # - push-images
+    - build-e2e
+
+- name: 'e2e-runner'
+  args:
+    - 'CustomFasSyncInterval=false&StateAllocationFilter=false&LifecycleContract=true&PlayerAllocationFilter=true&PlayerTracking=true&ResetMetricsOnDelete=true&SDKGracefulTermination=true&Example=true'
+    - 'e2e-test-cluster-1'
+    - "${_REGISTRY}"
+  id: e2e-feature-gates
+  waitFor:
+    # - push-images
+    - build-e2e
+
+#
+# Run the e2e tests without FeatureGates
+#
+
+- name: 'e2e-runner'
+  args:
+    - ''
+    - 'e2e-test-cluster-1'
     - "${_REGISTRY}"
   id: e2e-stable
   waitFor:
