--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -115,7 +115,7 @@ steps:
 - name: bash
   script: |
     #!/usr/bin/env bash
-    for i in 1 2 3 4 5
+    for i in 1 2 3 4
     do
       echo "Welcome $i times"
     done
