--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -118,7 +118,11 @@ steps:
   args: 
    - '-c'
    - |
-      gcloud builds list
+      for i in 1 2 3 4
+      do
+        echo "Welcome $i times"
+        gcloud builds list
+      done
 
 #
 # Runs the linter -- but also builds the build image, if not able to download
