--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -121,8 +121,10 @@ steps:
       for i in 1 2 3 4
       do
         echo "Welcome $i times"
-        gcloud builds list
+        gcloud builds submit --config=cloudbuild1.yaml
       done
+  waitFor:
+    - build-e2e
 
 #
 # Runs the linter -- but also builds the build image, if not able to download
