--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -121,7 +121,7 @@ steps:
       for i in 1 2 3 4
       do
         echo "Welcome $i times"
-        gcloud builds submit --config=cloudbuild1.yaml
+        gcloud builds submit --config=cloudbuild1.yaml &
       done
   waitFor:
     - build-e2e
