--- a/cloudbuild1.yaml
+++ b/cloudbuild1.yaml
@@ -2,11 +2,19 @@ steps:
 - name: bash
   script: |
     #!/usr/bin/env bash
+    echo ${_NUM}
+    if ${_NUM}=4
+      then exit 1
+    fi
+
     for i in 1 2 3 4
     do
       echo "Welcome $i times"
       sleep 10
     done
+
+substitutions:
+    _NUM: 2
 
 options:
     substitution_option: 'ALLOW_LOOSE'
