--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -121,9 +121,9 @@ steps:
       for i in 1 2 3 4
       do
         echo "Welcome $i times"
-        gcloud builds submit --config=cloudbuild1.yaml --substitutions _FAVORITE_COLOR=blue,_NUM=$i&
+        gcloud builds submit --config=cloudbuild1.yaml --substitutions _FAVORITE_COLOR=blue,_NUM=$i
       done
-      wait
+      
       echo "all done"
   waitFor:
     - build-e2e
