--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -118,13 +118,20 @@ steps:
   args: 
    - '-c'
    - |
+      exitCodes=()
       for i in 1 2 3 4
       do
         echo "Welcome $i times"
-        gcloud builds submit --config=cloudbuild1.yaml --substitutions _FAVORITE_COLOR=blue,_NUM=$i
+        { gcloud builds submit --config=cloudbuild1.yaml --substitutions _FAVORITE_COLOR=blue,_NUM=$i; exitCode+=(&?) }&
       done
-      
+      wait
+
       echo "all done"
+
+      for str in ${myArray[@]}; do
+        echo "exit code: "
+        echo $str
+      done
   waitFor:
     - build-e2e
 
