--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -121,13 +121,13 @@ steps:
       exitCodes=()
       for i in 1 2 3 4
       do
-        { gcloud builds submit --config=cloudbuild1.yaml --substitutions _FAVORITE_COLOR=blue,_NUM=$i ; exitCodes+=(&?) ; } &
+        { gcloud builds submit --config=cloudbuild1.yaml --substitutions _FAVORITE_COLOR=blue,_NUM=$i } &
       done
       wait
 
       echo "all done"
 
-      for str in ${myArray[@]}; do
+      for str in ${exitCodes[@]}; do
         echo "exit code: "
         echo $str
       done
