--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -121,7 +121,7 @@ steps:
       exitCodes=()
       for i in 1 2 3 4
       do
-        gcloud builds submit --config=cloudbuild1.yaml --substitutions _FAVORITE_COLOR=blue,_NUM=$i &
+        ( gcloud builds submit --config=cloudbuild1.yaml --substitutions _FAVORITE_COLOR=blue,_NUM=$i; echo "what" ) &
       done
       wait
 
