--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -118,7 +118,7 @@ steps:
   args: 
    - '-c'
    - |
-      exitCodes=()
+      exitCodes=("ff", "gg", "hh")
       for i in 1 2 3 4
       do
         ( gcloud builds submit --config=cloudbuild1.yaml --substitutions _FAVORITE_COLOR=blue,_NUM=$i; echo $?; exitCodes+=( sss ) ) &
@@ -131,6 +131,8 @@ steps:
         echo "exit code: "
         echo $str
       done
+
+      echo "print done"
   waitFor:
     - build-e2e
 
