--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -118,7 +118,7 @@ steps:
   args: 
    - '-c'
    - |
-      exitCodes=("ff" "gg" "hh")
+      # exitCodes=("ff" "gg" "hh")
       for i in 1 2 3 4
       do
         ( gcloud builds submit --config=cloudbuild1.yaml --substitutions _FAVORITE_COLOR=blue,_NUM=$i; echo $?; echo "whywhywhy"; exitCodes+=("sss") ) &
@@ -127,11 +127,13 @@ steps:
 
       echo "all done"
 
-      exitCodes+=("out")
-      for str in ${exitCodes[@]}; do
-        echo "exit code: "
-        echo $str
-      done
+      # exitCodes+=("out")
+      # for str in ${exitCodes[@]}; do
+      #   echo "exit code: "
+      #   echo $str
+      # done
+
+      echo "${exitCodes[@]}"
 
       echo "print done"
   waitFor:
