--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -121,7 +121,7 @@ steps:
       # exitCodes=("ff" "gg" "hh")
       for i in 1 2 3 4
       do
-        ( gcloud builds submit --config=cloudbuild1.yaml --substitutions _FAVORITE_COLOR=blue,_NUM=$i; echo $?; echo "whywhywhy"; exitCodes[i]="sss" ) &
+        ( gcloud builds submit --config=cloudbuild1.yaml --substitutions _FAVORITE_COLOR=blue,_NUM=$i; echo $?; echo "whywhywhy"; exitCodes+=("in"); echo "${exitCodes[@]}" ) &
       done
       wait
 
