--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -131,7 +131,9 @@ steps:
           featureWithGate="woshiautopilotgate"
           featureWithoutGate="woshiautopilot"
         fi
-        ( gcloud builds submit --config=cloudbuild1.yaml --substitutions _FEATURE_WITH_GATE=$featureWithGate,_FEATURE_WITHOUT_GATE=$featureWithoutGate,_NUM=$cloudProduct; echo "$?" > "$dir/$cloudProduct" ; ) &
+        ( gcloud builds submit --config=cloudbuild1.yaml \
+            --substitutions _FEATURE_WITH_GATE=$featureWithGate,_FEATURE_WITHOUT_GATE=$featureWithoutGate,_NUM=$cloudProduct;
+            echo "$?" > "$dir/$cloudProduct" ; ) &
       done
       wait
 
