--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -133,7 +133,9 @@ steps:
         fi
         ( gcloud builds submit --config=cloudbuild1.yaml \
             --substitutions _FEATURE_WITH_GATE=$featureWithGate,_FEATURE_WITHOUT_GATE=$featureWithoutGate,_NUM=$cloudProduct;
+            echo "!!!!!!!!!!!!!!!!!";
             echo "$dir/$cloudProduct_$cloudProduct";
+            echo "!!!!!!!!!!!!!!!!!";
             echo "$?" > "$dir/$cloudProduct_$cloudProduct" ; ) &
       done
       wait
