--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -134,9 +134,9 @@ steps:
         ( gcloud builds submit --config=cloudbuild1.yaml \
             --substitutions _FEATURE_WITH_GATE=$featureWithGate,_FEATURE_WITHOUT_GATE=$featureWithoutGate,_NUM=$cloudProduct;
             echo "!!!!!!!!!!!!!!!!!";
-            echo "$dir/$cloudProduct_$cloudProduct";
+            echo "$dir/$cloudProduct-$cloudProduct";
             echo "!!!!!!!!!!!!!!!!!";
-            echo "$?" > "$dir/$cloudProduct_$cloudProduct" ; ) &
+            echo "$?" > "$dir/$cloudProduct-$cloudProduct" ; ) &
       done
       wait
 
