--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -135,8 +135,8 @@ steps:
             --substitutions _FEATURE_WITH_GATE=$featureWithGate,_FEATURE_WITHOUT_GATE=$featureWithoutGate,_NUM=$cloudProduct;
             echo "!!!!!!!!!!!!!!!!!";
             echo "$dir/$cloudProduct-$cloudProduct";
-            echo "!!!!!!!!!!!!!!!!!";
-            echo "$?" > "$dir/$cloudProduct-$cloudProduct" ; ) &
+            echo "@@@@@@@@@"
+            echo "$?" > "$dir/$cloudProduct-$cloudProduct"; ) &
       done
       wait
 
