--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -149,7 +149,7 @@ steps:
       # done
 
       for file in "$dir"/*; do
-        printf 'PID %d returned %d\n' "${file##*/}" "$(<"$file")"
+        printf 'PID %s returned %d\n' "${file##*/}" "$(<"$file")"
         if [ $(<"$file") -eq 1 ];
           then exit 1
         fi
