--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -113,6 +113,23 @@ steps:
   waitFor: ['-']
 
 - name: 'gcr.io/cloud-builders/gcloud'
+  id: cancel-orphan-e2e-tests
+  waitFor:
+    - e2e-wait-to-become-leader
+  script: |
+    #!/usr/bin/env bash
+
+    
+    on_going_builds=($(gcloud builds list --ongoing --filter "tags:'e2e-test'" --format="value(id)" | xargs))
+    for on_going_build in ${on_going_builds[@]}
+    do
+      echo "Cancelling e2e test build $on_going_build"
+      gcloud builds cancel $on_going_build
+    done
+
+  timeout: 5400s # 90m - leave an hour for e2es to run on top of the global timeout of 2.5h
+
+- name: 'gcr.io/cloud-builders/gcloud'
   id: test-$PROJECT_ID
   entrypoint: bash
   args: 
