--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -114,8 +114,7 @@ steps:
 
 - name: 'gcr.io/cloud-builders/gcloud'
   id: cancel-orphan-e2e-tests
-  waitFor:
-    - e2e-wait-to-become-leader
+  
   script: |
     #!/usr/bin/env bash
 
@@ -129,50 +128,50 @@ steps:
 
   timeout: 5400s # 90m - leave an hour for e2es to run on top of the global timeout of 2.5h
 
-- name: 'gcr.io/cloud-builders/gcloud'
-  id: test-$PROJECT_ID
-  entrypoint: bash
-  args: 
-   - '-c'
-   - |
-      dir=$(mktemp -d)
-      cloudProducts=("generic" "gke-autopilot")
+# - name: 'gcr.io/cloud-builders/gcloud'
+#   id: test-$PROJECT_ID
+#   entrypoint: bash
+#   args: 
+#    - '-c'
+#    - |
+#       dir=$(mktemp -d)
+#       cloudProducts=("generic" "gke-autopilot")
       
-      for cloudProduct in ${cloudProducts[@]}
-      do
-        if [ $cloudProduct = generic ]
-        then 
-          featureWithGate="woshigenericgate"
-          featureWithoutGate="woshigeneric"
-        else
-          featureWithGate="woshiautopilotgate"
-          featureWithoutGate="woshiautopilot"
-        fi
-        ( gcloud builds submit --config=cloudbuild1.yaml \
-            --substitutions _FEATURE_WITH_GATE=$featureWithGate,_FEATURE_WITHOUT_GATE=$featureWithoutGate,_NUM=$cloudProduct;
-            echo "$?" > "$dir/$cloudProduct-$cloudProduct"; ) &
-      done
-      wait
+#       for cloudProduct in ${cloudProducts[@]}
+#       do
+#         if [ $cloudProduct = generic ]
+#         then 
+#           featureWithGate="woshigenericgate"
+#           featureWithoutGate="woshigeneric"
+#         else
+#           featureWithGate="woshiautopilotgate"
+#           featureWithoutGate="woshiautopilot"
+#         fi
+#         ( gcloud builds submit --config=cloudbuild1.yaml \
+#             --substitutions _FEATURE_WITH_GATE=$featureWithGate,_FEATURE_WITHOUT_GATE=$featureWithoutGate,_NUM=$cloudProduct;
+#             echo "$?" > "$dir/$cloudProduct-$cloudProduct"; ) &
+#       done
+#       wait
 
-      echo "all done"
+#       echo "all done"
 
-      # exitCodes+=("out")
-      # for str in ${exitCodes[@]}; do
-      #   echo "exit code: "
-      #   echo $str
-      # done
+#       # exitCodes+=("out")
+#       # for str in ${exitCodes[@]}; do
+#       #   echo "exit code: "
+#       #   echo $str
+#       # done
 
-      for file in "$dir"/*; do
-        printf 'PID %s returned %d\n' "${file##*/}" "$(<"$file")"
-        if [ $(<"$file") -eq 1 ];
-          then exit 1
-        fi
-      done
+#       for file in "$dir"/*; do
+#         printf 'PID %s returned %d\n' "${file##*/}" "$(<"$file")"
+#         if [ $(<"$file") -eq 1 ];
+#           then exit 1
+#         fi
+#       done
 
-      rm -r "$dir"
-      echo "print done"
-  waitFor:
-    - build-e2e
+#       rm -r "$dir"
+#       echo "print done"
+#   waitFor:
+#     - build-e2e
 
 #
 # Runs the linter -- but also builds the build image, if not able to download
