--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -157,6 +157,8 @@ steps:
   args: 
    - '-c'
    - |
+      set -eu
+      pids=()
       dir=$(mktemp -d)
       cloudProducts=("generic" "gke-autopilot")
       for cloudProduct in ${cloudProducts[@]}
@@ -177,22 +179,37 @@ steps:
         for k8sVersion in ${k8sVersions[@]}
         do
           ( gcloud builds submit --config=e2e-test-cloudbuild.yaml \
-              --substitutions _FEATURE_WITH_GATE=$featureWithGate,_FEATURE_WITHOUT_GATE=$featureWithoutGate,_CLOUD_PRODUCT=$cloudProduct,_TEST_CLUSTER_NAME=$testCluster,_TEST_CLUSTER_LOCATION=$testClusterLocation;
-            echo "$?" > "$dir/$cloudProduct-$k8sVersion"; ) &
+              --substitutions _FEATURE_WITH_GATE=$featureWithGate,_FEATURE_WITHOUT_GATE=$featureWithoutGate,_CLOUD_PRODUCT=$cloudProduct,_TEST_CLUSTER_NAME=$testCluster,_TEST_CLUSTER_LOCATION=$testClusterLocation; ) &
+          pids+=($!)
         done
       done
-      wait
 
-      for file in "$dir"/*; do
-        printf '%s returned %d\n' "${file##*/}" "$(<"$file")"
-        if [ $(<"$file") -ne 0 ]
-        then
-          rm -r "$dir"
-          exit 1
+      for pid in "${pids[@]}"; do
+        if wait -n; then
+          :
+        else
+          status=$?
+          echo "One of the subprocesses exited with nonzero status $status. Aborting."
+          for pid in "${pids[@]}"; do
+            # Send a termination signal to all the children, and ignore errors
+            # due to children that no longer exist.
+            kill "$pid" 2> /dev/null || :
+          done
+          exit "$status"
         fi
       done
+      # wait
 
-      rm -r "$dir"
+      # for file in "$dir"/*; do
+      #   printf '%s returned %d\n' "${file##*/}" "$(<"$file")"
+      #   if [ $(<"$file") -ne 0 ]
+      #   then
+      #     rm -r "$dir"
+      #     exit 1
+      #   fi
+      # done
+
+      # rm -r "$dir"
       echo "all done"
   waitFor:
     - cancel-orphan-e2e-tests
