--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -178,8 +178,8 @@ steps:
         k8sVersions=("1.24")
         for k8sVersion in ${k8sVersions[@]}
         do
-          ( gcloud builds submit --config=e2e-test-cloudbuild.yaml \
-              --substitutions _FEATURE_WITH_GATE=$featureWithGate,_FEATURE_WITHOUT_GATE=$featureWithoutGate,_CLOUD_PRODUCT=$cloudProduct,_TEST_CLUSTER_NAME=$testCluster,_TEST_CLUSTER_LOCATION=$testClusterLocation; ) &
+          output=&(( gcloud builds submit --config=e2e-test-cloudbuild.yaml \
+              --substitutions _FEATURE_WITH_GATE=$featureWithGate,_FEATURE_WITHOUT_GATE=$featureWithoutGate,_CLOUD_PRODUCT=$cloudProduct,_TEST_CLUSTER_NAME=$testCluster,_TEST_CLUSTER_LOCATION=$testClusterLocation; ) &)
           pids+=($!)
         done
       done
@@ -194,6 +194,7 @@ steps:
             # Send a termination signal to all the children, and ignore errors
             # due to children that no longer exist.
             kill "$pid" 2> /dev/null || :
+            echo "killed $pid"
           done
           exit "$status"
         fi
