--- a/e2e-test-cloudbuild.yaml
+++ b/e2e-test-cloudbuild.yaml
@@ -68,12 +68,12 @@
 
 
 steps:
-- name: 'e2e-runner'
-  args:
-    - 'CustomFasSyncInterval=false&StateAllocationFilter=false&LifecycleContract=true&PlayerAllocationFilter=true&PlayerTracking=true&ResetMetricsOnDelete=true&SDKGracefulTermination=true&Example=true'
-    - 'e2e-test-cluster'
-    - "${_REGISTRY}"
-  id: e2e-feature-gates-1
+# - name: 'e2e-runner'
+#   args:
+#     - 'CustomFasSyncInterval=false&StateAllocationFilter=false&LifecycleContract=true&PlayerAllocationFilter=true&PlayerTracking=true&ResetMetricsOnDelete=true&SDKGracefulTermination=true&Example=true'
+#     - 'e2e-test-cluster'
+#     - "${_REGISTRY}"
+#   id: e2e-feature-gates-1
 
 - name: bash
   env:
@@ -90,7 +90,7 @@ steps:
     echo "Welcome $FOO"
     for i in 1 2 3 4
     do
-      sleep 10
+      sleep 60
     done
     echo "Welcome $FOOFOO"
   id: e2e-$BAR
