--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -31,8 +31,7 @@ steps:
 #
 
 - name: gcr.io/$PROJECT_ID/restore_cache
-  id:
-   - 'gcr.io/$PROJECT_ID/restore_cache'
+  id: 'gcr.io/$PROJECT_ID/restore_cache'
   args:
     - '--bucket=gs://$_CACHE_BUCKET'
     - '--key=$_HTMLTEST_CACHE_KEY'
