--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -178,8 +178,9 @@ steps:
         for k8sVersion in ${k8sVersions[@]}
         do
           pwd
-          gcloud builds submit --config=e2e-test-cloudbuild.yaml \
-            --substitutions _FEATURE_WITH_GATE=$featureWithGate,_FEATURE_WITHOUT_GATE=$featureWithoutGate,_CLOUD_PRODUCT=$cloudProduct,_TEST_CLUSTER_NAME=$testCluster,_TEST_CLUSTER_LOCATION=$testClusterLocation,_REGISTRY=${_REGISTRY} &
+          { gcloud builds submit --config=e2e-test-cloudbuild.yaml \
+            --substitutions _FEATURE_WITH_GATE=$featureWithGate,_FEATURE_WITHOUT_GATE=$featureWithoutGate,_CLOUD_PRODUCT=$cloudProduct,_TEST_CLUSTER_NAME=$testCluster,_TEST_CLUSTER_LOCATION=$testClusterLocation,_REGISTRY=${_REGISTRY} \
+            |& sed "s/^/${cloudProduct}-${k8sVersion}: /" } &
           pids+=($!)
         done
       done
