--- a/e2e-test-cloudbuild.yaml
+++ b/e2e-test-cloudbuild.yaml
@@ -111,11 +111,14 @@ steps:
     for i in 1 2 3 4
     do
       if [ $i -eq 3 ] && [ $BAR = generic ]
-        then exit 1
+        then sleep 10
       fi
-      sleep 20
+      sleep 10
       echo $i
     done
+    if [ $BAR = generic ]
+        then exit 1
+      fi
     echo "Welcome $FOOFOO"
   id: e2e-${PROJECT_ID}
 
